# legal_advisor_chatbot

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DISCLAIMER.md  Dockerfile  EVALUATION.md  LICENSE.txt  README.md  RESEARCH.md  RULES.md  TERMS_OF_USE.md  deploy-hf.sh  main.py  pyproject.toml  requirements.txt
eval/: RETRIEVAL_METRICS.md  annotation_guide.md  calibration_results.csv  calibration_sweep.py  calibration_sweep_parallel.py  make_figures.py  oos_queries.jsonl  results_phase1.csv  retrieval_benchmark.py  retrieval_results.json  run_eval.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.jsx  AppShell.jsx  index.css
frontend/src/components/: Chat.jsx  MarkdownMessage.jsx  ReasoningTrace.jsx
frontend/src/components/landing/: BenchmarkSection.jsx  FeaturePillars.jsx  HeroSection.jsx  LandingFooter.jsx  (+2 more)
frontend/src/hooks/: useCountUp.js  useIntersectionObserver.js
frontend/src/pages/: LandingPage.jsx  ProfilePage.jsx
paper/: EALAI_PAPER.tex
paper/figures/: table2_hallucination.csv  table3_retrieval_ablation.csv
prompts/: base_prompt.md
src/: api_client.py  api_server.py  audit.py  benchmark.py  chat_service.py  citation_checker.py  entity_extractor.py  intent_classifier.py  kb_cli.py  kb_retriever.py  logger.py  main.py  prompt_builder.py  response_formatter.py  rules.py  vector_store.py
src/tests/: test_audit.py  test_chat_service.py  test_fallback.py  test_formatter.py  test_kb_cli.py  test_kb_retriever.py  test_prompt_builder.py  test_rules.py
(+5 files in other folders)
