[project]
name = "legal-advisor-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.66.0",
    "google-generativeai>=0.8.6",
    "jinja2>=3.1.6",
    "nltk>=3.9.3",
    "pip>=26.0.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
