[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "legal-advisor-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.11",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "nltk>=3.9.3",
    "pip>=26.0.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.3.1",
    "spacy>=3.8.11",
    "groq>=1.1.2",
    "experta>=1.9.4",
    "ragas>=0.4.3",
    "datasets>=4.8.4",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",
    "matplotlib>=3.10.8",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
